--- a/index.html
+++ b/index.html
@@ -273,6 +273,70 @@
                         </div>
                     </div>
                 </li>
+                <!-- Mã #52 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma52.jpg"></div>
+                                <div class="slide"><img src="./images/ma521.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 2.400.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã #52 - Đã SPC ID - Hall 14</div>
+                        </div>
+                    </div>
+                </li>
+                <!-- Mã #53 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma53.jpg"></div>
+                                <div class="slide"><img src="./images/ma531.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 1.300.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã #53 - Đã SPC ID - Hall 13</div>
+                        </div>
+                    </div>
+                </li>
+                <!-- Mã #54 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma54.jpg"></div>
+                                <div class="slide"><img src="./images/ma541.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 350.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã #54 - Đã SPC ID - Hall 14</div>
+                        </div>
+                    </div>
+                </li>
+                <!-- Mã #55 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma55.jpg"></div>
+                                <div class="slide"><img src="./images/ma551.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 450.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã #55 - Đã SPC ID - Hall 11</div>
+                        </div>
+                    </div>
+                </li>
 
             </ul>
         </div>
