--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma20.jpg"></div>
                                 <div class="slide"><img src="./images/ma201.jpg"></div>
                             </div>
@@ -70,6 +71,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma26.jpg"></div>
                                 <div class="slide"><img src="./images/ma261.jpg"></div>
                             </div>
@@ -86,6 +88,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma30.jpg"></div>
                                 <div class="slide"><img src="./images/ma301.jpg"></div>
                             </div>
@@ -102,6 +105,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma35.jpg"></div>
                                 <div class="slide"><img src="./images/ma351.jpg"></div>
                             </div>
@@ -113,27 +117,12 @@
                         </div>
                     </div>
                 </li>
-                <!-- Mã #40 -->
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <div class="slide-wrapper">
-                                <div class="slide"><img src="./images/ma40.jpg"></div>
-                                <div class="slide"><img src="./images/ma401.jpg"></div>
-                            </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
-                        </div>
-                        <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 2.100.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã #40 - Đã SPC ID - Hall 14</div>
-                        </div>
-                    </div>
-                </li>
                 <!-- Mã #41 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma41.jpg"></div>
                                 <div class="slide"><img src="./images/ma411.jpg"></div>
                             </div>
@@ -150,6 +139,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma42.jpg"></div>
                                 <div class="slide"><img src="./images/ma421.jpg"></div>
                             </div>
@@ -166,6 +156,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma43.jpg"></div>
                                 <div class="slide"><img src="./images/ma431.jpg"></div>
                             </div>
@@ -182,6 +173,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma48.jpg"></div>
                                 <div class="slide"><img src="./images/ma481.jpg"></div>
                             </div>
@@ -198,6 +190,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma50.jpg"></div>
                                 <div class="slide"><img src="./images/ma501.jpg"></div>
                             </div>
@@ -214,6 +207,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma51.jpg"></div>
                                 <div class="slide"><img src="./images/ma511.jpg"></div>
                             </div>
@@ -230,6 +224,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma52.jpg"></div>
                                 <div class="slide"><img src="./images/ma521.jpg"></div>
                             </div>
@@ -246,6 +241,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma54.jpg"></div>
                                 <div class="slide"><img src="./images/ma541.jpg"></div>
                             </div>
@@ -262,6 +258,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma55.jpg"></div>
                                 <div class="slide"><img src="./images/ma551.jpg"></div>
                             </div>
@@ -278,6 +275,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma57.jpg"></div>
                                 <div class="slide"><img src="./images/ma571.jpg"></div>
                             </div>
@@ -294,6 +292,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
                                 <div class="slide"><img src="./images/ma58.jpg"></div>
                                 <div class="slide"><img src="./images/ma581.jpg"></div>
                             </div>
