--- a/index.html
+++ b/index.html
@@ -185,23 +185,6 @@
                         </div>
                     </div>
                 </li>
-                <!-- Mã #57 -->
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <div class="slide-wrapper">
-                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
-                                <div class="slide"><img src="./images/ma57.jpg"></div>
-                                <div class="slide"><img src="./images/ma571.jpg"></div>
-                            </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
-                        </div>
-                        <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 1.450.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã #57 - Đã SPC ID - Hall 14</div>
-                        </div>
-                    </div>
-                </li>
                 <!-- Mã #58 -->
                 <li>
                     <div class="product-item">
@@ -250,6 +233,23 @@
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 2.000.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã #60 - Chưa SPC ID - Hall 15</div>
+                        </div>
+                    </div>
+                </li>
+                <!-- Mã #61 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma61.jpg"></div>
+                                <div class="slide"><img src="./images/ma611.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 1.200.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã #61 - Hội: Level 24 - AE Bốn Phương - Kđ6</div>
                         </div>
                     </div>
                 </li>
