--- a/index.html
+++ b/index.html
@@ -202,6 +202,23 @@
                         </div>
                     </div>
                 </li>
+                <!-- Mã #62 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma62.jpg"></div>
+                                <div class="slide"><img src="./images/ma621.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 1.300.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã #62 - Đã SPC ID - Hall 15</div>
+                        </div>
+                    </div>
+                </li>
 
             </ul>
         </div>
