--- a/index.html
+++ b/index.html
@@ -51,187 +51,275 @@
             <ul class="products">
                 <!-- Mã #20 -->
                 <li>
+                    <style>
+                        #test-20{
+                            width: 130px;
+                            position:absolute;
+                            bottom: 950px;
+                            right: 0px;
+                        }
+                    </style>
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
+                                <div id="test-20"><img src="../images/sale15.png" alt=""></div>
                                 <div class="slide"><img src="./images/ma20.jpg"></div>
                                 <div class="slide"><img src="./images/ma201.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 150.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> <b><strike style="background-color: #fff;">150.000đ</strike></b> 125.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã #20 - Hội: Level 7 - Bắc Ninh War - Kđ5</div>
                         </div>
                     </div>
                 </li>
                 <!-- Mã #35 -->
                 <li>
+                    <style>
+                        #test-35{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 916px;
+                        right: 0px;
+                    }
+                    </style>
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
+                                <div id="test-35"><img src="../images/sale15.png" alt=""></div>
                                 <div class="slide"><img src="./images/ma35.jpg"></div>
                                 <div class="slide"><img src="./images/ma351.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 650.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> <b><strike style="background-color: #fff;">650.000đ</strike></b> 550.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã #35 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
                 </li>
                 <!-- Mã #43 -->
                 <li>
+                    <style>
+                        #test-43{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 920px;
+                        right: 0px;
+                    }
+                    </style>
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
+                                <div id="test-43"><img src="../images/sale15.png" alt=""></div>
                                 <div class="slide"><img src="./images/ma43.jpg"></div>
                                 <div class="slide"><img src="./images/ma431.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 700.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> <b><strike style="background-color: #fff;">750.000đ</strike></b> 595.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã #43 - Đã SPC ID - Hall 13</div>
                         </div>
                     </div>
                 </li>
                 <!-- Mã #51 -->
                 <li>
+                    <style>
+                        #test-51{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 922px;
+                        right: 0px;
+                    }
+                    </style>
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
+                                <div id="test-51"><img src="../images/sale15.png" alt=""></div>
                                 <div class="slide"><img src="./images/ma51.jpg"></div>
                                 <div class="slide"><img src="./images/ma511.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 600.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> <b><strike style="background-color: #fff;">600.000đ</strike></b> 510.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã #51 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
                 </li>
                 <!-- Mã #52 -->
                 <li>
+                    <style>
+                        #test-52{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 920px;
+                        right: 0px;
+                    }
+                    </style>
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
+                                <div id="test-52"><img src="../images/sale15.png" alt=""></div>
                                 <div class="slide"><img src="./images/ma52.jpg"></div>
                                 <div class="slide"><img src="./images/ma521.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 2.400.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> <b><strike style="background-color: #fff;">2.400.000đ</strike></b> 2.040.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã #52 - Đã SPC ID - Hall 14</div>
                         </div>
                     </div>
                 </li>
                 <!-- Mã #55 -->
                 <li>
+                    <style>
+                        #test-55{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 920px;
+                        right: 0px;
+                    }
+                    </style>
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
+                                <div id="test-55"><img src="../images/sale15.png" alt=""></div>
                                 <div class="slide"><img src="./images/ma55.jpg"></div>
                                 <div class="slide"><img src="./images/ma551.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 450.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> <b><strike style="background-color: #fff;">450.000đ</strike></b> 385.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã #55 - Đã SPC ID - Hall 11</div>
                         </div>
                     </div>
                 </li>
                 <!-- Mã #58 -->
                 <li>
+                    <style>
+                        #test-58{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 925px;
+                        right: 0px;
+                    }
+                    </style>
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
+                                <div id="test-58"><img src="../images/sale15.png" alt=""></div>
                                 <div class="slide"><img src="./images/ma58.jpg"></div>
                                 <div class="slide"><img src="./images/ma581.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 800.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> <b><strike style="background-color: #fff;">800.000đ</strike></b> 680.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã #58 - Đã SPC ID - Hall 13</div>
                         </div>
                     </div>
                 </li>
                 <!-- Mã #60 -->
                 <li>
+                    <style>
+                        #test-60{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 1146px;
+                        right: 0px;
+                    }
+                    </style>
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
+                                <div id="test-60"><img src="../images/sale15.png" alt=""></div>
                                 <div class="slide"><img src="./images/ma60.jpg"></div>
                                 <div class="slide"><img src="./images/ma601.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 2.000.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> <b><strike style="background-color: #fff;">2.000.000đ</strike></b> 1.700.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã #60 - Chưa SPC ID - Hall 15</div>
                         </div>
                     </div>
                 </li>
                 <!-- Mã #61 -->
                 <li>
+                    <style>
+                        #test-61{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 944px;
+                        right: 0px;
+                    }
+                    </style>
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
+                                <div id="test-61"><img src="../images/sale15.png" alt=""></div>
                                 <div class="slide"><img src="./images/ma61.jpg"></div>
                                 <div class="slide"><img src="./images/ma611.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 1.200.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> <b><strike style="background-color: #fff;">1.200.000đ</strike></b> 1.020.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã #61 - Hội: Level 24 - AE Bốn Phương - Kđ6</div>
                         </div>
                     </div>
                 </li>
                 <!-- Mã #62 -->
                 <li>
+                    <style>
+                        #test-62{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 922px;
+                        right: 0px;
+                    }
+                    </style>
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
+                                <div id="test-62"><img src="../images/sale15.png" alt=""></div>
                                 <div class="slide"><img src="./images/ma62.jpg"></div>
                                 <div class="slide"><img src="./images/ma621.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 1.300.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> <b><strike style="background-color: #fff;">1.300.000đ</strike></b> 1.105.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã #62 - Đã SPC ID - Hall 15</div>
                         </div>
                     </div>
                 </li>
                 <!-- Mã #56 -->
                 <li>
+                    <style>
+                        #test-56{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 924px;
+                        right: 0px;
+                    }
+                    </style>
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <!-- <div id="test"><img src="../images/sale.jpg" alt=""></div> -->
+                                <div id="test-56"><img src="../images/sale15.png" alt=""></div>
                                 <div class="slide"><img src="./images/ma56.jpg"></div>
                                 <div class="slide"><img src="./images/ma561.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 800.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> <b><strike style="background-color: #fff;">800.000đ</strike></b> 680.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã #56 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
