--- a/index.html
+++ b/index.html
@@ -399,6 +399,31 @@
                         </div>
                     </div>
                 </li>
+                <!-- Mã #71 -->
+                <li>
+                    <!-- <style>
+                        #test-63{
+                        width: 130px;
+                        position:absolute;
+                        bottom: 924px;
+                        right: 0px;
+                    }
+                    </style> -->
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma71.jpg"></div>
+                                <div class="slide"><img src="./images/ma711.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">300.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #71 - Đã SPC ID - Hall 12</div>
+                        </div>
+                    </div>
+                </li>
 
             </ul>
         </div>
